# RC5-Rust

./: Cargo.toml  README.md
rc5-block/: Cargo.toml
rc5-block/src/: lib.rs  modes.rs  rc5.rs  types.rs  utils.rs
rc5-cli/: Cargo.toml  README.md
rc5-cli/src/: main.rs  opts.rs
rc5-rs/: Cargo.toml
rc5-rs/src/: lib.rs  rc5.rs  types.rs  utils.rs
rc5-rs/src/tests/: cbc.rs  ecb.rs  mod.rs
src/: lib.rs  modes.rs  rc5.rs  types.rs  utils.rs
src/tests/: ctr.rs  ecb.rs  mod.rs
