[workspace]
members = [ "rc5-cli","rc5-rs"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Syed-Anees <syedanees816@gmail.com>"]
repository = "https://github.com/SyedAnees21/RC5-Rust"
edition = "2024"
publish = false
rust-version = "1.85.0"

[workspace.dependencies]
hex = "0.4.3"
