[package]
name = "rc5-block"
license = "MIT OR Apache-2.0"
description = "Rust implementation of RC5 Block cipher with ECB, CBC and CTR operation modes."
keywords = ["crypto", "rc5", "block-cipher", "Encryption", "Decryption"]
categories = ["cryptography", "multimedia::encoding"]
publish = true
readme.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rand = "0.8"
thiserror = "2.0.12"
hex = { workspace = true }
