[package]
name = "rc5-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["word-64"]
word-16 = []
word-32 = []
word-64 = []

[dependencies]
rc5-rs ={ path = "../rc5-rs" }
clap = { version = "4.5.40", features = ["derive"]}
anyhow = "1.0.98"
hex = { workspace = true }
