[package]
name = "rc5-cli"
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["word-32"]
word-16 = []
word-32 = []
word-64 = []
word-128 = []

[dependencies]
rc5-block ={ path = "../rc5-block" }
clap = { version = "4.5.40", features = ["derive"]}
anyhow = "1.0.98"
hex = { workspace = true }
